--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -3,7 +3,7 @@ description: admin web dashboard
 
 # The following line prevents the package from being accidentally published to
 # pub.dev using `pub publish`. This is preferred for private packages.
-publish_to: 'none' # Remove this line if you wish to publish to pub.dev
+publish_to: "none" # Remove this line if you wish to publish to pub.dev
 
 # The following defines the version and build number for your application.
 # A version number is three numbers separated by dots, like 1.2.43
@@ -24,10 +24,15 @@ dependencies:
   flutter:
     sdk: flutter
   charts_flutter: ^0.10.0
+  cloud_firestore: ^2.3.0
   cupertino_icons: ^1.0.2
   data_table_2: ^2.0.4
+  firebase_auth: ^2.0.0
+  firebase_core: ^1.3.0
   get: ^4.1.4
   google_fonts: ^2.1.0
+  provider: ^5.0.0
+  shared_preferences: ^2.0.6
 
 dev_dependencies:
   flutter_test:
@@ -37,7 +42,6 @@ dev_dependencies:
 # following page: https://dart.dev/tools/pub/pubspec
 # The following section is specific to Flutter.
 flutter:
-
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
   # the material Icons class.
